--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,8 @@
 language: csharp
 mono: none
 dotnet: 3.1
+
 script:
+  - dotnet restore
   - dotnet build
   - dotnet test
-deploy:
-  provider: script
-  skip_cleanup: true
-  script:
-     rsync -r --delete-after $TRAVIS_BUILD_DIR/ ahmetundemir@45.158.14.179:/path/to/destination/test/
-  on:
-    branch: master
